# SilkForge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
dependencies/include/glad/: glad.h
dependencies/src/: glad.c
